# chok-v2-ai-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.deploy.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy-image.yml  tests.yml
app/: main.py
app/agents/: graph.py  llm.py  log_agent.py  metric_agent.py  modality_agents.py  orchestrator.py  planner.py  report_agent.py  report_llm.py  router.py  schemas.py  trace_agent.py
app/api/: health.py  ingest.py
app/core/: config.py  logging_config.py
app/db/: models.py  session.py
app/schemas/: contracts.py
app/services/: bundle_compression.py  bundle_parser.py  bundle_store.py  delivery_reconciler.py  job_cleanup.py  job_queue.py  raw_normalizer.py  rca_validation.py  signal_selector.py  (+2 more)
deploy/: init-chok-ai.sql
docs/: agent-design.md  bundle-compression.md  db-deploy.md  flow.md  git-convention.md  implementation-plan.md  pr-orchestrator.md  prompt-eval-harness-design.md  spring-contract.md
migrations/: env.py
scripts/: analyze_baseline.py  rerun_experiment.py
tests/: conftest.py  test_agents.py  test_bundle_compression.py  test_bundle_parser.py  test_bundle_store.py  test_db_session.py  test_delivery_reconciler.py  test_graph.py  test_health.py  test_ingest.py  test_job_cleanup.py  test_job_queue.py  test_llm_layer.py  test_logging_config.py  test_pipeline.py  test_prompts.py  test_raw_normalizer.py  test_rca_validation.py  test_signal_selector.py  test_spring_client.py  test_stuck_job_reaper.py
(+16 files in other folders)
