[project]
name = "chok-v2-ai-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "cryptography>=42.0",  # MySQL 8.4 caching_sha2_password 인증에 필요 (clean 환경 DB 연결)
    "httpx>=0.27.0",
    "langgraph>=1.2.9",
    "langchain-openai>=1.3.5",
    "drain3>=0.9.11",
    "alembic>=1.13.0",  # DB 스키마 마이그레이션 (배포 시 alembic upgrade head)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff.lint]
# FastAPI 라우트 인자 기본값의 Depends()는 프레임워크 관용 패턴 → B008 비활성
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
